--- a/previews/FaithValleyGroup/Lib/fonty.css
+++ b/previews/FaithValleyGroup/Lib/fonty.css
@@ -1,18 +1,28 @@
-@media (max-width: 840px) {
-	p, .plist{
-		font-size: 15px !important;
-	}
-	h1{
-		font-size: 24px !important;
-	}
-}
+
 
 @media (max-width: 600px) {
 	p, .plist{
-	/*	font-size: 12px !important;*/
+		font-size: 12px !important;
 		text-align: left !important;
+	}
+	.flowdown{
+		font-size: 20px !important;
 	}
 	h1{
 		font-size: 20px !important;
+	}
+}
+
+@media (max-width: 770px) {
+	p:not(.flowdown), .plist{
+		/*font-size: 19px !important;*/
+		line-height: 1.2;
+	}
+	.midbox p:not(.flowdown){
+		font-size: 25px !important;
+		line-height: 1.4;
+	}
+	h1:not(.col-main){
+		font-size: 24px !important;
 	}
 }
