--- a/previews/FaithValleyGroup/Lib/nucleon.css
+++ b/previews/FaithValleyGroup/Lib/nucleon.css
@@ -85,9 +85,10 @@ blockquote p {
     height: auto;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 770px) {
     .splitBox33, .splitBox40, .splitBox60, .splitBox50, .splitBox66{
         width: 100%;
+        max-width: 100%;
     }
     .splitBox33 img, .splitBox40 img, .splitBox50 img, .splitBox60 img, .splitBox66 img{
         max-width: 100%;
@@ -106,7 +107,7 @@ blockquote p {
     border-radius: 3px;
     vertical-align: middle;
     opacity: .8;
-    max-width: 20% !important;
+    max-width: 20%;
     margin:2% !important;
 }
 
@@ -129,4 +130,19 @@ blockquote p {
     /*Opera*/
     -o-transform: rotate(90deg);
     filter:alpha(opacity=40);
+}
+
+.border-menu {
+  position: relative;
+  padding-left: 1.25em;
+}
+.border-menu:before {
+  content: "";
+  position: absolute;
+  top: 0.25em;
+  left: 0;
+  width: 1em;
+  height: 0.125em;
+  border-top: 0.375em double #000;
+  border-bottom: 0.125em solid #000;
 }
