--- a/previews/FaithValleyGroup/Lib/nucleon.css
+++ b/previews/FaithValleyGroup/Lib/nucleon.css
@@ -108,7 +108,7 @@ blockquote p {
     vertical-align: middle;
     opacity: .8;
     max-width: 20%;
-    margin:2% !important;
+    margin:2%;
 }
 
 .gal:hover{
