--- a/previews/FaithValleyGroup/style.css
+++ b/previews/FaithValleyGroup/style.css
@@ -77,7 +77,8 @@ nav ul .active a{
 }
 
 .dish{
-    background: #F29118;
+    background: #0D992D;
+    /*background: #F29118;*/
     color: white;
     padding: 25px;
     text-align: center;
@@ -93,14 +94,16 @@ nav ul .active a{
 
 .dish input[type="button"]:hover{
     background:white;
-    color:#F29118;
-    border: 2px solid #F29118;
+    color:#0D992D;
+    /*color:#F29118;*/
+    border: 2px solid #0D992D;
+    /*border: 2px solid #F29118;*/
     padding: 6px;
     cursor: pointer
 }
 
 .emphasise{
-    color: #F29118;
+    color: #0D992D;
     font-style: oblique;
 }
 
