--- a/previews/FaithValleyGroup/style.css
+++ b/previews/FaithValleyGroup/style.css
@@ -7,7 +7,6 @@
 }
 
 body{
-    /*background:#DDD;*/
     background: white;
     user-select: none; 
 }
@@ -17,17 +16,16 @@ body{
 }
 
 nav{
-    background: white;
     color: #2D2D2D;
     position: fixed;
-    height: 72px;/*59px;*/
+    height: 72px;
     width: 100%;
     left: 0;
     right: 0;
     top: 0;
     z-index: 99999;
-    /*box-shadow: 0px 0px 12px black;*/
     font-family: "Varela Round" !important;
+    background:rgba(255,255,255,0.97);
 }
 
 nav ul{
@@ -49,7 +47,6 @@ nav ul li img{
 }
 
 nav ul li img:hover{
-    /*background:#ADADAD;*/
     opacity: .5;
     cursor: pointer;
 }
@@ -57,28 +54,21 @@ nav ul li img:hover{
 nav ul li a{
     padding:20px;
     text-decoration: none;
-    /*color:black;*/
     color:#0D992D;
     font-size: 17px ;//new
 }
 
 nav ul li a:not(#menubtn):hover{
-    /*color:white;*/
-    /*background:#ADADAD;*/
     color: white;
     background: #0D992D;
-    /*color: #0D992D;*/ 
 }
 
 nav ul .active a{
-    /*background : #CC474C;*/
     font-weight: 800;
-    /*color:White;*/
 }
 
 .dish{
     background: #0D992D;
-    /*background: #F29118;*/
     color: white;
     padding: 25px;
     text-align: center;
@@ -95,9 +85,7 @@ nav ul .active a{
 .dish input[type="button"]:hover{
     background:white;
     color:#0D992D;
-    /*color:#F29118;*/
     border: 2px solid #0D992D;
-    /*border: 2px solid #F29118;*/
     padding: 6px;
     cursor: pointer
 }
@@ -278,7 +266,7 @@ img.rounded{
 
 @media (max-width: 450px), (max-width: 780px) { /* FOR IPHONE */
     nav{
-        height: 70px
+        height: 70px;
     }
     .midbox{
         margin-left: 10%;
@@ -300,7 +288,7 @@ img.rounded{
     }
 
     nav ul{
-        background: white
+        background:rgba(255,255,255,0.87);
     }
 
     #menubtn{
