--- a/previews/FaithValleyGroup/style.css
+++ b/previews/FaithValleyGroup/style.css
@@ -34,7 +34,7 @@ nav ul{
 
 nav ul li{
     padding-top: 25px;
-    padding-left: 0 !important;
+    padding-left: 2% !important;
     padding-right: 0 !important;    
     display: inline-block;
     vertical-align: top;
@@ -334,17 +334,22 @@ img.rounded{
 
 @media (max-width: 780px) { /* FOR IPAD */
     nav{
-        height: 70px;
+        height: 80px;
         font-size: 25px;
     }
     nav ul li a{
         padding-left: 12px;
         padding-right: 12px;
     }
-
-
+    .powerVisible{
+        text-align:center;
+        padding-top: 30px;
+    }
     .gal{
         max-width: 40% !important;
+    }
+    .menu-border:before{
+        top:0.5em !important;
     }
 
     .floaty_left{
