--- a/previews/MoizaBertrandX/style.css
+++ b/previews/MoizaBertrandX/style.css
@@ -154,3 +154,14 @@ footer{
 	margin-top: 200px;
 	opacity: .9
 }
+
+.creative{
+	text-decoration: none;
+	color:white;
+	font-size: 10px;
+	position: relative;
+	bottom: 25px;
+	text-align: center;
+}
+
+
